--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-.idea/
-Server/node_modules
+node_modules
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+tmux_start_prod.sh
