--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1-svelte",
 	"private": true,
 	"scripts": {
+		"preinstall": "npx only-allow pnpm",
 		"dev": "APP_ENV=dev vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -10,15 +11,15 @@
 		"deploy:prod": "vite build && vite preview --host"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.5.27",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"svelte": "^5.0.0",
-		"vite": "^5.4.4",
-		"vitest": "^1.2.0"
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.48.4",
+		"@sveltejs/vite-plugin-svelte": "^4.0.4",
+		"svelte": "^5.43.3",
+		"vite": "^5.4.21",
+		"vitest": "^1.6.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-i18n": "^4.0.0"
+		"svelte-i18n": "^4.0.1"
 	}
 }
